--- a/app/public/index.html
+++ b/app/public/index.html
@@ -76,12 +76,16 @@
       <div class="row">
         <div class="baseline-container col-sm-12">
           <div class="connect-container">
-            <p>Connect with the author:</p><a href="http://github.com/duncanleung">
-              <div class="github-logo"></div></a><a href="https://www.linkedin.com/in/duncanleung">
-              <div class="linkedin-logo"></div></a>
+            <p>Connect with the author:</p>
+              <a href="https://github.com/Ozzyjtjustin">
+                <div class="github-logo"></div>
+              </a>
+              <a href="https://www.linkedin.com/in/duncanleung">
+                <div class="linkedin-logo"></div>
+              </a>
           </div>
           <div class="branding-container col-sm-12">
-            <p>CryptoFeels &copy; 2015</p>
+            <p>CryptoFeels &copy; 2018</p>
           </div>
         </div>
       </div>
